# fast_mcp_middleware

./: .gitignore  README.md  claude_mcp_config.json  oauth_flow.drawio  pyproject.toml
infra/terraform/: cognito_user_pool.tf  provider.tf  variables.tf
infra/terraform/configs/dev/: envars.sh
src/: test.py
src/mcp_services/auth_mcp/: server.py
src/mcp_services/auth_mcp/middleware/: mcp_authentication.py
src/mcp_services/example_mcp/: server.py
src/mcp_services/fastapi/: server.py
src/mcp_services/mcp_engine/: __init__.py
src/mcp_services/obligations_register_service/: sse_server.py
src/mcp_services/standard/: server.py
src/mcp_services/standard/middleware/: mcp_authentication.py
